--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "devDependencies": {
     "mocha": "^10.0.0",
-    "node-sass": "^7.0.1",
+    "sass": "^1.51.0",
     "sassdoc": "^2.7.4"
   },
   "scripts": {
