--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sass-planifolia",
-  "version": "0.6.1",
+  "version": "1.0.0-alpha1",
   "description": "Vanilla Sass helper functions",
   "main": "index.js",
   "devDependencies": {
