Fix issue with generating documentation after module restructure

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "docs": "sassdoc sass"
+    "docs": "sassdoc ."
   },
   "keywords": [
     "sass"
